# semantic-histogram-based-global-localization

./: CMakeLists.txt  LICENSE  README.md
Dataset/: dataset
include/: matcher.hpp  neighborhood.hpp  pointCloudMapping.hpp  registration.hpp  toolfile.hpp
src/: main.cpp  matcher.cpp  neighborhood.cpp  pointCloudMapping.cpp  registration.cpp  toolfile.cpp
